# SteamyWorld

./: .pre-commit-config.yaml  DEVELOPMENT.md  README.md  ROADMAP.md  pyproject.toml  tox.ini
.github/workflows/: validate.yml
src/: cli.py  compression.py  core.py  logger.py
test/: __init__.py  cli_test.py  core_test.py
