[tool.poetry]
name = "steamy"
version = "0.1.0"
description = "A game modding CLI tool to handle Steamworld games assets."
authors = ["Dikuriku <dikuriku.dev@gmail.com>"]
license = "GLP-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
